# GGJ2024

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yaml  release.yaml
src/: main.rs  ringcon.rs  sound_player.rs  ui.rs
src/config/: mod.rs
src/plugins/: art.rs  character_selection.rs  game_level.rs  input.rs  mod.rs  ringcon.rs  score.rs  seventeen.rs  sound_player.rs  start_menu.rs
