[package]
name = "ggj-2024"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.12.1", features = ["dynamic_linking"] }
bevy_tweening = { version = "0.9.0", features = ["bevy_sprite"] }
rand = "0.8"
dlopen2 = "0.6.1"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

# See: https://github.com/NiklasEi/bevy_game_template/blob/main/Cargo.toml#L17C1-L32C13

# This is used by trunk as it doesn't support custom profiles: https://github.com/trunk-rs/trunk/issues/605
# xbuild also uses this profile for building android AABs because I couldn't find a configuration for it
[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true

# Profile for distribution
[profile.dist]
inherits = "release"
opt-level = 3
lto = true
codegen-units = 1
strip = true
